- обновлены зависимости - sq fixes