@@ -22,7 +22,6 @@
 package com.github._1c_syntax.bsl.languageserver.diagnostics;
 
 import com.github._1c_syntax.bsl.languageserver.context.symbol.MethodSymbol;
-import com.github._1c_syntax.bsl.languageserver.context.symbol.ParameterDefinition;
 import com.github._1c_syntax.bsl.languageserver.diagnostics.metadata.DiagnosticMetadata;
 import com.github._1c_syntax.bsl.languageserver.diagnostics.metadata.DiagnosticSeverity;
 import com.github._1c_syntax.bsl.languageserver.diagnostics.metadata.DiagnosticTag;
@@ -34,8 +33,6 @@ import org.antlr.v4.runtime.tree.ParseTree;
 import org.apache.commons.collections4.map.CaseInsensitiveMap;
 
 import java.util.Collection;
-import java.util.List;
-import java.util.Map;
 import java.util.Objects;
 import java.util.stream.Collectors;
 
@@ -47,28 +44,26 @@ import java.util.stream.Collectors;
   tags = {
     DiagnosticTag.DESIGN
   }
-
 )
 public class FunctionOutParameterDiagnostic extends AbstractVisitorDiagnostic {
 
   @Override
   public ParseTree visitFunction(BSLParser.FunctionContext ctx) {
 
-    List<ParameterDefinition> parameters = documentContext
+    var parameters = documentContext
       .getSymbolTree()
       .getMethodSymbol(ctx.getParent())
       .stream()
       .map(MethodSymbol::getParameters)
       .flatMap(Collection::stream)
       .filter(param -> !param.isByValue())
-      .collect(Collectors.toList());
+      .toList();
 
     if (parameters.isEmpty()) {
       return ctx;
     }
 
-    Map<String, BSLParserRuleContext> lvalues = Trees
-      .findAllRuleNodes(ctx.subCodeBlock(), BSLParser.RULE_lValue)
+    var lvalues = Trees.findAllRuleNodes(ctx.subCodeBlock(), BSLParser.RULE_lValue)
       .stream()
       .collect(
         Collectors.toMap(
